add switch camera btn

--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,21 @@
     "short_name": "FoodNinja",
     "start_url": "/index.html",
     "display": "standalone",
-    "background_color": "##fce4ec",
+    "background_color": "#fce4ec",
     "theme_color": "#fce4ec",
     "orientation": "portrait-primary",
     "icons": [
         {
             "src": "/imgs/192.png",
             "type": "image/png",
-            "sizes": "192x192"
+            "sizes": "192x192",
+            "purpose": "any maskable"
         },
         {
             "src": "/imgs/512.png",
             "type": "image/png",
-            "sizes": "512x512"
+            "sizes": "512x512",
+            "purpose": "any maskable"
         }
     ]
 }
